# pyPTE

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: Makefile  make.bat
docs/source/: .about.rst.swp  about.rst  conf.py  devdoc.rst  examples.rst  examples_text.rst  handle_multi.rst  index.rst  install.rst  modules.rst  myPTE.rst  phase_transfer_entropy.rst  pyPTE.examples.models.rst  pyPTE.examples.rst  pyPTE.rst  pyPTE.utils.rst  usage.rst  utils.rst
examples/: mne_demo.py
examples/models/: kuramoto_global.py  kuramoto_local.py  neural_mass_model.py
examples/utils/: stats.py
pyPTE/: __init__.py  handle_multi.py  myPTE.py  phase_transfer_entropy.py  pyPTE.py
pyPTE/adapters/: mne_adapter.py  pandas_adapter.py
pyPTE/core/: delay_estimations.py  handle_multi.py  pyPTE.py  test_pyPTE.py
pyPTE/examples/: kuramoto.py  kuramoto_global.py  kuramoto_local.py  mne_demo.py
pyPTE/examples/models/: kuramoto_global.py  neural_mass_model.py
pyPTE/utils/: dict_helpers.py  mne_tools.py  network_helpers.py  stats.py  visualize.py
pyPTE/utils/mne_tools/: interpolate_missing.py
tests/: test_pyPTE.py
